# Netflix-Executive-Intelligence-Platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SHOWCASE.md  README.md  ROADMAP.md  insights.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py
app/business/: rules.py  storytelling.py
app/charts/: bar.py  base.py  extended.py  heatmap.py  line.py  map.py  theme.py  utils.py
app/components/: cards.py  feedback.py  filters.py  layout.py  navigation.py
app/data/: filters.py  loader.py
config/: development.yaml  production.yaml  theme.yaml
dashboard/: streamlit_app.py
demo/: script.md
docs/: DECISIONS.md  RELEASE_NOTES.md  api.md  architecture.md  audit_report.md  competitive_analysis.md  data_dictionary.md  design_review_board_critique.md  development_guide.md  engineering_execution_specification.md  executive_summary.md  kpi_dictionary.md  netflix_executive_intelligence_design_spec.md  netflix_high_fidelity_blueprint.md  performance_report.md  software_architecture_specification.md  technical_report.md  ux_audit.md
notebooks/: 03_feature_engineering.ipynb  04_exploratory_analysis.ipynb  05_business_insights.ipynb
reports/: gold_data_quality_report.md  silver_data_quality_report.md
resume/: project_pitch.md  resume_bullets.md
src/: __init__.py  cleaning.py  config.py  features.py  utils.py  visualization.py
(+78 files in other folders)
